--- a/index.html
+++ b/index.html
@@ -3,9 +3,67 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
+  <title>Send WhatsApp message without adding number to contacts</title>
+  <style>
+    html, body{
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+header{
+  width: 100%;
+  padding-top: 17px;
+  height: 91px;
+  background-color: #1EBEA5;
+  color: white;
+  margin: 0;
+  padding: 20px;
+}
+@media (max-width: 767px) {
+  header {
+      height: 61px;
+  }
+}
+
+div{
+  display: block;
+  height: calc(100vh - 91px);
+  width: 100%;
+  margin: 100px auto;
+  text-align: center;
+}
+
+input{
+  height: 36px;
+  padding: 3px 8px;
+  border: 1px solid #01E675;
+  color: #444;
+  border-radius: 5px;
+  margin: 0 auto;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+input[type='submit']{
+  height: 44px;
+  background-color: #01E675;
+  color: white;
+}
+  </style>
 </head>
 <body>
-
+  <header>
+    <h2>Send WhatsApp message without adding number to contacts.</h3>
+  </header>
+  <section>
+  <div>
+    <form action="https://api.whatsapp.com/send">
+      <input type="number" name="phone" placeholder="919533..."/>
+      <input type="submit" name="submit"/>
+    </form>
+  </div>
+  </section>
 </body>
 </html>
