--- a/index.html
+++ b/index.html
@@ -65,5 +65,18 @@ input[type='submit']{
     </form>
   </div>
   </section>
+  <script>
+    // ServiceWorker is a progressive technology. Ignore unsupported browsers
+    if ('serviceWorker' in navigator) {
+      console.log('CLIENT: service worker registration in progress.');
+      navigator.serviceWorker.register('https://cdn.css-tricks.com/service-worker.js').then(function() {
+        console.log('CLIENT: service worker registration complete.');
+      }, function() {
+        console.log('CLIENT: service worker registration failure.');
+      });
+    } else {
+      console.log('CLIENT: service worker is not supported.');
+    }
+  </script>
 </body>
 </html>
